--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,10 @@ defaults:
     values:
       layout: single
       author_profile: false
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: false
