--- a/_config.yml
+++ b/_config.yml
@@ -8,16 +8,13 @@ remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-include-cache
 
+include:
+  - _pages  
+
 defaults:
+  # _pages
   - scope:
-      path: ""
-    values:
-      layout: single
-      author_profile: false
-  # _posts
-  - scope:
-      path: ""
-      type: posts
+      path: "_pages"
     values:
       layout: single
       author_profile: false
