--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,10 @@ remote_theme: "mmistakes/minimal-mistakes"
 
 plugins:
   - jekyll-include-cache
-
-include:
-  - _pages  
-
+  
 defaults:
-  # _pages
   - scope:
-      path: "_pages"
+      path: ""
     values:
       layout: single
       author_profile: false
