--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-include-cache
   
+minimal_mistakes_skin: "mint"  
+  
 defaults:
   - scope:
       path: ""
